# dali

./: README.md  pyproject.toml
dreamerv3_compat/dreamerv3/: agent.py  nets.py
local_scripts/: ball_in_cup_expert_local.sh  main_local.sh  walker_expert_local.sh
