[project]
name = "dali"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "box2d>=2.3.10",
    "brax==0.9.3",
    "carl-bench[brax,dm-control]",
    "gymnasium==0.29",
    "imageio>=2.37.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "jax>=0.4.27 ; sys_platform == 'darwin'",
    "jax[cuda12]>=0.4.27 ; sys_platform == 'linux'",
    "jaxlib==0.4.30 ; sys_platform == 'darwin'",
    "jaxlib[cuda12]==0.4.30 ; sys_platform == 'linux'",
    "jsonlines>=4.0.0",
    "jupyterlab>=4.4.0",
    "moviepy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "optax==0.2.4",
    "pandas>=2.2.3",
    "protobuf==3.20",
    "rliable>=1.2.0",
    "ruamel-yaml==0.17.32",
    "scikit-learn>=1.6.1",
    "scipy==1.12.0",
    "seaborn>=0.13.2",
    "wandb>=0.19.9",
]
